--- a/About.css
+++ b/About.css
@@ -87,7 +87,7 @@
 
     @media (max-width: 768px) {
       nav ul {
-         /* display: none;   */
+        display: none;    
         flex-direction: column;
         position: absolute;
         top: 60px;
@@ -108,7 +108,7 @@
         color: #fff;
         font-size: 24px;
       }
-    }
+    
 
     .menu-toggle {
       display: none;
