--- a/course.css
+++ b/course.css
@@ -92,7 +92,7 @@
             /* Responsive */
     @media (max-width: 768px) {
       nav ul {
-         /* display: none;   */
+         display: none;    
         flex-direction: column;
         position: absolute;
         top: 60px;
